--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,13 +1,10 @@
-.fa-bars{
-    color: #888;
-}
-
 header {
     font-size: 1.3rem;
+    font-family: "Montserrat", sans-serif;
 }
 
 .info-container {
-  min-width: 300px;
+    min-width: 300px;
 }
 
 .sign-in-button {
@@ -15,4 +12,9 @@ header {
     border: none;
     text-decoration: none;
     color: white;
+}
+
+.fa_bars--color{
+    color: #888;
+    display: contents;
 }
